Samudra_Testing/samudra_plotting.log
Job 21775452.pbspl1.nas.nasa.gov started on Fri Mar 14 15:18:40 PDT 2025
The job requested the following resources:
    ncpus=20
    place=scatter:excl
    walltime=01:00:00

PBS set the following environment variables:
        FORT_BUFFERED = 1
                   TZ = PST8PDT

On r401i1n12:
Warning: no access to tty (Inappropriate ioctl for device).
Thus no job control in this shell.
Current directory is /nobackup/sruiz5/climate-sim/Samudra_Testing
Starting Samudra parallel plotting at Fri Mar 14 15:18:44 PDT 2025
  File "/nobackupp28/sruiz5/climate-sim/Samudra_Testing/parallel_plotting.py", line 752
    SST_pred = SST_pred.rename("2.5m "+r'$\theta_O
                                       ^
SyntaxError: unterminated string literal (detected at line 752)
Finished Samudra parallel plotting at Fri Mar 14 15:18:44 PDT 2025

____________________________________________________________________
Job Resource Usage Summary for 21775452.pbspl1.nas.nasa.gov

    CPU Time Used            : 00:00:01
    Real Memory Used         : 4kb
    Walltime Used            : 00:00:03
    Exit Status              : 0

    Number of CPUs Requested : 20
    Walltime Requested       : 01:00:00

    Execution Queue          : normal
    Charged To               : g26113

    Job Stopped              : Fri Mar 14 15:18:48 2025
____________________________________________________________________
